check-pod-run-on-web/hello_gke_ing_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gke-ing
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-gke-ing
